[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fn-traits = "0.1.2"
itertools = "0.12.1"
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tower = { version = "0.4.13", features = ["full"] }

[build-dependencies]
prettyplease = { version = "0.2.16", default-features = false }
proc-macro2 = { version = "1.0.78", default-features = false }
syn = { version = "2.0.50", default-features = false }
